# mocap_ros

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh
docs/: mock_pointcloud_demo.webm  virtual_mocap_demo.webm
src/mocap_ros_driver/: README.md  package.xml  setup.cfg  setup.py
src/mocap_ros_driver/mocap_ros_driver/: mocap_ros_driver.py
src/poses_estimator/: CMakeLists.txt  README.md  package.xml
src/poses_estimator/config/: clouds.yaml  clouds_virtual_mocap.yaml  icp_visualization.rviz
src/poses_estimator/launch/: mocap_pose_estimator.launch.py
src/poses_estimator/src/: pointcloud_to_poses.cpp
src/poses_estimator/test/: moving_cloud_pub.py
