<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_ros_driver</name>
  <version>0.0.1</version>
  <description>Publishes a point cloud from Mocap UDP output</description>
  <maintainer email="lucas.costa@ee.ufcg.edu.br">Lucas Costa</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
