<?xml version="1.0"?>
<package format="3">
  <name>icp_pose_estimator</name>
  <version>0.1.0</version>
  <description>
    Execução de ICP entre uma PointCloud recebida e várias clouds armazenadas em YAML, 
    com publicação das poses resultantes. Contém nó em C++ e nó em Python.
  </description>

  <maintainer email="lucas@exemplo.com">Lucas</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ament_index_cpp</build_depend>

  <!-- YAML (C++) -->
  <build_depend>yaml-cpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Python execution for script -->
  <exec_depend>python3</exec_depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Export for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
